	Added a static std::set that keeps track of what's been parsed
	already.  If inserting the path into the set fails, we know we've
	parsed it already and just return.  This mitigates the risk of
	unneeded recursive instantiation (since the project_xml class
	instantiates itself if it finds a <subproject> tag with the 'ref'
	attribute, referencing another projectxml file).

2005-09-15 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/portage/project_xml.cc, herdstat/portage/project_xml.hh:
	Added separate files for projectxml files (what used to be mpHandler
	in herds_xml.cc) and make it responsible for fetching/parsing itself.
	* herdstat/portage/herds_xml.cc: Save projectxml files in
	LOCALSTATEDIR regardless.
	* herdstat/util/file.cc: Fixed dirname() to return "." if no "/" is
	found in the argument.

2005-09-14 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.2_alpha2).  Also, manually set
	xmlwrapp_LIBS instead of using pkg-config, otherwise 6 unneeded libs
	are linked in.  One really big advantage of this (besides resulting
	executable size) is that we can now run valgrind on herdstat (before
	we couldn't because of libgcrypt (required by libexslt)).
	* herdstat/portage/developer.cc, herdstat/portage/developer.hh,
	herdstat/portage/herd.cc, herdstat/portage/herd.hh: Use a std::set as
	the underlying container of Developers/Herd/Herds classes rather than
	a vector, so we can guarantee uniqueness and sort order.
	* herdstat/portage/herds_xml.cc, herdstat/portage/devaway_xml.cc,
	herdstat/portage/metadata_xml.cc, herdstat/portage/userinfo_xml.cc:
	Updated to use insert member of Developers/Herd/Herds instead of
	push_back.
	* src/action_away_handler.cc, src/action_dev_handler.cc,
	src/action_herd_handler.cc, src/action_meta_handler.cc: Update to use
	operator++ of Developers/Herd/Herds::iterator instead of operator+
	since the underlying set::iterator does not provide operator+.